kubedashboard/ingress-kubedashboard.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubernetes-dashboard
  annotations:
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:eu-west-1:791320653008:certificate/c81c231c-4817-4ee2-b95b-874e8ac57982
    alb.ingress.kubernetes.io/listen-ports: [{"HTTPS":443}]
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/backend-protocol: HTTPS
spec:
  rules:
  - host: kubedashboard.mrbhardw.awsps.myinstance.com
    http:
      paths:
      - backend:
          service:
            name: kubernetes-dashboard
            port:
              number: 443
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - kubedashboard.mrbhardw.awsps.myinstance.com
